--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap-vue": "^2.18.1",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "v-calendar": "^2.0.1",
+        "vue": "^2.6.12"
     }
 }
