--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "v-calendar": "^2.0.1",
-        "vue": "^2.6.12"
+        "vue": "^2.6.12",
+        "vue-notification": "^1.3.20"
     }
 }
